Start of the blog feature

--- a/apps/portfolio/blog/portfolio-website.mdx
+++ b/apps/portfolio/blog/portfolio-website.mdx
@@ -1,8 +1,26 @@
 ---
 author: Who you think?
-created: Wed Aug 30 11:47:26 AM CEST 2023
+title: Jo whats this
+created: 30.08.2023
+slug: portfolio
 ---
 
 # Test thing for a blog
 
 this is a testing text and i am currently checking how fast i can type but it turns out the limiting factor seems to be the speed at which i form this sentence. not really though i am still a slow typer... it has become better though
+
+
+- list item 1
+- list item 2
+- list item 3
+- list item 1
+
+```ts
+import { abc } from "def";
+
+const a = abc();
+
+while (b < 0) {
+			return abc()();
+}
+```
