Some small work on the blog feature

--- a/apps/portfolio/blog/portfolio-website.mdx
+++ b/apps/portfolio/blog/portfolio-website.mdx
@@ -1,6 +1,6 @@
 ---
-author: Who you think?
-title: Jo whats this
+author: Me, myself and I, and the two guys sitting in the back
+title: 🏗 Building this website
 created: 30.08.2023
 slug: portfolio
 ---
@@ -15,12 +15,12 @@ this is a testing text and i am currently checking how fast i can type but it tu
 - list item 3
 - list item 1
 
-```ts
+```ts title
 import { abc } from "def";
 
 const a = abc();
 
 while (b < 0) {
-			return abc()();
+	return abc()();
 }
 ```
